<resources>
    <string name="app_name">Minis Maps</string>
    <string name="settings">Settings</string>
    <string name="new_map">New Map</string>
    <string name="change_name">Change Name</string>
    <string name="ok">OK</string>
    <string name="maps">Maps</string>
    <string name="pcs">PCs</string>
    <string name="edit_pc">Edit PC</string>
    <string name="edit_character">Edit Character</string>
    <string name="characters">Characters</string>
    <string name="name">Name</string>
    <string name="abbreviation">Abbreviation</string>
    <string name="type">Type</string>
    <string name="pc">PC</string>
    <string name="npc">NPC</string>
    <string name="background_picture">Background Picture</string>
    <string name="origin">Origin</string>
    <string name="comma">,</string>
    <string name="box_size">Box Size</string>
    <string name="cancel">Cancel</string>
    <string name="x">X:</string>
    <string name="y">Y:</string>
    <string name="save">Save</string>
    <string name="show_grid">Show Grid</string>
    <string name="size">Size</string>
    <string name="enemy">Enemy</string>
    <string name="add_enemy">Add Enemy</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="edit_enemy">Edit Enemy</string>
    <string name="deselect">Deselect</string>
    <string name="select_fog">Select Fog:</string>
    <string name="add_fog_entry">Add Fog Entry</string>
    <string name="lock_message">Lock Message</string>
    <string name="edit_entry">Edit Entry</string>
    <string name="edit_fog_entry">Edit Fog Entry</string>
</resources>
