<?xml version="1.0" encoding="utf-8"?>
<com.minismap.DialogLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:dialogTitle="@string/add_fog_entry">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/abbreviation"
        android:layout_marginLeft="10dp" />

    <EditText
        android:id="@+id/edit_abbreviation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textCapWords"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lock_message"
        android:layout_marginLeft="10dp" />

    <EditText
        android:id="@+id/edit_lock_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textCapWords"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="10dp" />

</com.minismap.DialogLayout>