<?xml version="1.0" encoding="utf-8"?>
<com.minismap.DialogLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:dialogTitle="@string/add_enemy">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:layout_marginLeft="10dp" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="10dp">

        <RadioButton
            android:id="@+id/radio_dropdown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="radioChange"/>

        <Spinner
            android:id="@+id/spinner_names"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:spinnerMode="dropdown"/>

        <RadioButton
            android:id="@+id/radio_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="0"
            android:onClick="radioChange"/>

        <EditText
            android:id="@+id/edit_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapWords"/>

    </GridLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/abbreviation"
        android:layout_marginLeft="10dp" />

    <EditText
        android:id="@+id/edit_abbreviation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textCapWords"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="10dp" />


</com.minismap.DialogLayout>